public/stylesheets/motiro.css
body {
    font: normal 10pt Verdana,sans-serif;
    background-color: #FFF; 
    text-align:center;   
}

#notice {
    border: 2px solid red;
    padding: 0.5em;
    margin-bottom: 1em;
    background-color: red;
    font: bold smaller sans-serif;
    color: #ffffff;
}

#content {
    width: 780px;
    margin: 0 auto;
    text-align:left;   
}

#summary {
    font: smaller courier;
}

#changes {
    display: none;
}

div.channel {
    width: 378px;
    float: left;
    margin: 4px 4px 4px 4px;
}

div.channel-title {
    font-weight: bold;
    margin:0;
    padding: 0 2px 1px 8px;
    color: #000
}
            
div.channel-body-outer {
    padding: 0 9px 0 9px;
}

a.feed {
    display: block;
    float: right;
    margin: 14px 10px;
}

div.window {
    background-color: #a0ccee;
    padding: 8px 8px 8px 8px;
    margin: 8px 4px 8px 4px;
}

div.inner {
    background: #FFF;
    padding: 4px 4px 12px 4px;
}

div.toolbar {
    font-size: 0.8em;
}

div.editbar {
    border-top: 1px dotted #9C9C9C;
}

div.channel_toolbar {
    border-bottom: 1px dotted #9C9C9C;
}


.disabled {
    color: gray;
}

.marked {
    color: #F00;
    background: #FFA;
}

.changed {
    background:#FFD;
}

table.diff {
    border: solid gray;
    border-width: 1px 0 1px 0;
    font-family: monospace;
    font-size: 0.72em;
}

table.diff pre {
    margin: 0;
    padding: 0;
    text-align: left;
}

table.diff tr {
    margin: 0 0 0 0;
    padding: 0 0 0 0;
    border: 0;
}

table.diff td {
    padding: 0 0.4em 0 0.4em;
}

td.left {
    border:solid;
    border-color: black gray black black;
}

td.right {
    border:solid black;
}

td.line_number {
    text-align: center;
    border:solid gray;
    border-width: 0 1px 0 1px;
}

input {
    border: solid 1px #80aacc;
}

input.button {
    background-color: #b0ddff;
}

#editor input.text {
    width: 100%;
}

textarea {
    border: solid 1px #80aacc;
    width: 100%;
}

#footer {
    padding: 4px 6px 2px 8px;
    font-size: x-small;
    text-align: center;
    color: gray;
    clear: left;
}

div#subversion div.channel-title {
    background: #E3A1C4
}

div#subversion div.channel-body-outer {
    background: #E3A1C4
}

div#events div.channel-title {
    background: #FFBD00
}

div#events div.channel-body-outer {
    background: #FFBD00
}

div#darcs div.channel-title {
    background: #E3A1C4
}

div#darcs div.channel-body-outer {
    background: #E3A1C4
}

div#nextrelease div.channel-title {
    background: #5CE28B
}

div#nextrelease div.channel-body-outer {
    background: #5CE28B
}

span.warning {
	border: 1px solid #F33;
	background: #FFA;
	padding: 0 3px 0 3px
}

#username_not_available {
	position: absolute;
	top: 12px;
	left: 64px;
}

#passwords_do_not_match {
	position: absolute;
	top: 12px;
	left: 174px;
}

